Improve Java feature posts and add runnable CompletableFuture examples